# hyperbolic_optimization_srp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tree1111_generation.py
datasets/tree1111/g01_lp/: g01_lp.labels.npy
datasets/tree1111/g04_lp/: g04_lp.edges.csv
experiments/: train_gnn.py
hgcn/: __init__.py
hgcn/layers/: hyperbolic_layers.py  layers.py
hgcn/models/: decoders.py  encoders.py
hgcn/utils/: eval_utils.py  hyperbolicity.py  train_utils.py
layers/: hyperbolic_layers.py
models/: gnn_hyperbolic.py
models/gcn/: gcn_3layer.py
models/layers/: attention_layers.py  hyperbolic_layers.py
models/link_prediction/: gcn_lp.py
models/node_clf/gcn/: basic_gcn.py  gcn.py  gcn_2layer.py
notebooks/: Hyperbolic_visual.ipynb  gcn_cora_v1.ipynb  gcn_lp_tree1111_v1.py  gcn_pubmed_v1.ipynb  gcn_synthetic_v1.ipynb  pyg_link_pred.py
optimizers/: riemannian.py
utils/: seed_everything.py  tree1111_generation.py
