[project]
name = "srp"
version = "0.1.0"
description = "Hyperbolic metric learning for graph classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoopt>=0.5.1",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.23.0",
]
